--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -12,3 +12,15 @@ table {
     text-align: left;
   }
 }
+
+.loading-spiner {
+  background: rgba(0, 0, 0, 0.15);
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  font-size: 20px;
+  color: #555;
+}
